--- a/details.html
+++ b/details.html
@@ -54,6 +54,9 @@
 			<ol>
 				<li>This is the git ammend demo!</li>
 			<ol>
+			<ol>
+				<li>This is going to be reverted!</li>
+			<ol>
             <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
